# animeface

./: CMakeLists.txt  README.md
src/: nv_config.h  nv_core.h  nv_core_matrix.c  nv_core_matrix.h  nv_cov.c  nv_distance.c  nv_eigen.c  nv_euclidean_color.c  nv_face.h  nv_face_analyze.c  nv_face_analyze.h  nv_face_detect.c  nv_face_detect.h  nv_face_detect_internal.h  nv_face_feature.h  nv_face_haarlike.c  nv_face_mlp_static.h  nv_gaussian.c  nv_gaussian5x5.c  nv_gray.c  nv_integral.c  nv_ip.h  nv_kmeans.c  nv_laplacian.c  nv_matrix.c  nv_ml.h  nv_ml_kmeans.h  nv_ml_mlp.h  nv_mlp.c  nv_num.h  nv_num_cov.h  nv_num_distance.h  nv_num_eigen.h  nv_num_lapack.h  nv_portable.h  nv_vector.c
